gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/python__eof-in-triple-string.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 5,
        end_line: 16,
    },
]
